--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <div class="menu-container">
             <nav class="menu">
                 <div class="date">Current Date</div>
-                <div class="signup">Sign Up</div>
-                <div class="login">Login</div>
+                <div class="links">
+                    <div class="signup">Sign Up</div>
+                    <div class="login">Login</div>
+                </div>
             </nav>
         </div>
     </body>
