--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 </div>
             </nav>
         </div>
+        <div class="header-container">
+            <div class="header">
+                <div class="subscribe">Subscribe &#9662;</div>
+                <div class="logo"><img src="img/awesome-logo.svg" alt="awesome-logo"></div>
+                <div class="social"><img src="img/social-icons.svg" alt="social-icons"></div>
+            </div>
+        </div>
     </body>
 
 </html>
