--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
                 <div class="social"><img src="img/social-icons.svg" alt="social-icons"></div>
             </div>
         </div>
+        <div class="photo-grid-container">
+            <div class="photo-grid">
+                <div class="photo-grid-item first-item">
+                    <img src="img/one.svg" alt="one">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="img/two.svg" alt="two">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="img/three.svg" alt="three">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="img/four.svg" alt="four">
+                </div>
+                <div class="photo-grid-item">
+                    <img src="img/five.svg" alt="five">
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
