--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="photo-grid-item">
                     <img src="img/four.svg" alt="four">
                 </div>
-                <div class="photo-grid-item">
+                <div class="photo-grid-item last-item">
                     <img src="img/five.svg" alt="five">
                 </div>
             </div>
