--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
         <div class="menu-container">
             <nav class="menu">
                 <div class="date">Current Date</div>
-                <div class="links">
-                    <div class="signup">Sign Up</div>
-                    <div class="login">Login</div>
-                </div>
+                <div class="signup">Sign Up</div>
+                <div class="login">Login</div>
             </nav>
         </div>
         <div class="header-container">
@@ -43,6 +41,11 @@
                 </div>
             </div>
         </div>
+        <footer class="footer">
+            <div class="footer-item footer-one"></div>
+            <div class="footer-item footer-two"></div>
+            <div class="footer-item footer-three"></div>
+        </footer>
     </body>
 
 </html>
